Adds activity for image preview and ability to set wallpaper. Adds settings too

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">RedditWall</string>
+    <string-array name="location_options">
+        <item>Home</item>
+        <item>Lock Screen</item>
+        <item>Both</item>
+    </string-array>
 </resources>
