Adds random wallpaper switching at specified intervals and a widget to switch wallpaper

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <item name="fab_delete" type="id" />
     <item name="fab_download" type="id" />
     <item name="fab_random" type="id" />
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 </resources>
 
 
